--- a/views/index.erb
+++ b/views/index.erb
@@ -2,5 +2,6 @@
 <p>Main menu</p>
 <ul>
   <li><a href="/contacts">View all contacts</a></li>
+  <li><a href="/contacts/new">Add a new contact</li>
   <!-- please complete me with links to other actions -->
 </ul>
