--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="main-header">
     <h1><%= @crm_app_name %></h1>
     <nav>
       <ul class="nav-links">
