--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,7 @@
 
   <body>
     <header class="main-header">
-    <h1><%= @crm_app_name %></h1>
+    <h1>Margarita's Contacts</h1>
     <nav>
       <ul class="nav-links">
         <li><a href="/">Home</a></li>
@@ -18,7 +18,9 @@
     </nav>
     </header>
 
-    <%= yield %>
+    <main>
+      <%= yield %>
+    </main>
 
     <footer>&copy; Margarita Bartholomew 2017</footer>
 
