--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,7 @@
       <ul class="nav-links">
         <li><a href="/">Home</a></li>
         <li><a href="/contacts/new">Add a contact</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Customer_relationship_management">About</a></li>
       </ul>
     </nav>
     </header>
