--- a/public/styles.css
+++ b/public/styles.css
@@ -63,7 +63,14 @@ footer {
 
 .contact-list li {
   padding: 15px 20px 0 20px;
+  color: white;
+}
+
+.contact-list li > a {
+  color: white;
+  text-decoration: none;
   font-size: 22px;
+  padding-right: 11px;
 }
 
 .contact-options {
